--- a/TheLastActivist/Layouts/MainGame.uistate.xml
+++ b/TheLastActivist/Layouts/MainGame.uistate.xml
@@ -6,7 +6,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>480</position-x>
         <position-y>270</position-y>
-        <position-z>148.643</position-z>
+        <position-z>83.9051</position-z>
         <lookat-x>480</lookat-x>
         <lookat-y>270</lookat-y>
         <lookat-z>0</lookat-z>
@@ -23,11 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Basura" />
+    <active-layer name="PC y NPC" />
     <layers>
         <layer locked="0" name="Ground" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Basura" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Obstaculos" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Basura" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="PC y NPC" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
